# agb

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
agb-sdl2/: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
agb-sdl2/src/: debugger.rs  main.rs
agb-web/: .gitignore  Cargo.toml  README.MD  build.bat  build.sh  webpack.config.js
agb-web/scripts/: agb_web.d.ts  agb_web.js  agb_web_bg.wasm  index.js
agb-web/src/: lib.rs
agb-web/www/: index.html  index.js  package-lock.json  package.json
core/: Cargo.toml
core/src/gameboy/: instructions.rs  joypad.rs  mod.rs  oam_dma.rs
core/tests/: test_roms.rs
docs/: 0.bootstrap.js  1.bootstrap.js  bootstrap.js  rustboy-loader.js  rustboy-wasm.html  rustboy.js  rustboy.wasm
frontend/: Cargo.toml
frontend/src/: events.rs  main.rs
frontend/src/ui/: emulator_ui.rs  mod.rs  window.rs
src/: c_lib.rs  lib.rs
src/debugger/: instructions.rs  mod.rs
src/gameboy/: apu.rs  assembly.rs  cpu.rs  debugger.rs  instructions.rs  joypad.rs  mmu.rs  mod.rs  mode.rs  oam_dma.rs  serial.rs  timer.rs  util.rs
src/gameboy/apu/: square.rs
src/gameboy/cartridge/: mbc1.rs  mbc3.rs  mod.rs  nombc.rs
src/gameboy/cpu/: alu.rs  interrupts.rs  mod.rs  registers.rs
src/gameboy/ppu/: cgb_ppu.rs  dmg_ppu.rs  framebuffer.rs  mod.rs
src/gameboy/savestates/: header.rs  mod.rs
tests/: test.rs
tests/manifests/mooneye-gb/: add_sp_e_timing.json  call_timing2.json  di_timing-GS.json  div_timing.json  ei_sequence.json  halt_ime0_nointr_timing.json  halt_ime1_timing.json  jp_cc_timing.json  ld_hl_sp_e_timing.json  (+3 more)
(+45 files in other folders)
