[package]
name = "agb-core"
version = "0.1.0"
authors = ["Atlas <achille@heraud.xyz>"]

[features]

[dependencies]
time = "0.1.38"
serde = "1.0.80"
serde_derive = "1.0.80"
bincode = "1.0.1"
#flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }

[dev-dependencies]
image = "0.10.4"
serde_json = "1.0.26"
