[package]
name = "agb-web"
version = "0.1.0"
authors = ["Achille Heraud <achille@heraud.xyz>"]
repository = "https://github.com/aHeraud/agb"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.3.0"
wasm-bindgen = "0.2.37"
web-sys = { version = "0.3.14", features = ["CanvasRenderingContext2d", "ImageData"] }
agb-core = {path = "../core"}
